--- a/_posts/1970-01-01-test.md
+++ b/_posts/1970-01-01-test.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Style Test"
+title:  张翔的博客
 date:   1970-01-01 08:00
-categories: jekyll
+categories: 只是一个测试
 permalink: /archivers/test
 ---
 
