--- a/_posts/2017-10-31-android跨进程通信思考.md
+++ b/_posts/2017-10-31-android跨进程通信思考.md
@@ -31,7 +31,8 @@ on a null object reference
 - ContentProvider(当你通过uri访问一个进程的provider的时候，这个provider的增删改查方法是在哪个线程中回调的嘛？)
 
 好的，我们花5分钟思考一下回答一下这个问题。。。
-![思考状](https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1505844194185&di=be4952cd20f7b5115fb78bb2cc5cc270&imgtype=0&src=http%3A%2F%2Fn1.itc.cn%2Fimg8%2Fwb%2Frecom%2F2016%2F05%2F21%2F146378695122491392.JPEG)
+![思考状](https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1505844194185&di=be4952cd20f7b5115fb78bb2cc5cc270&imgtype=0&src=http%3A%2F%2Fn1.itc.cn%2Fimg8%2Fwb%2Frecom%2F2016%2F05%2F21%2F146378695122491392.JPEG)    
+
 算了，我们还是做一个简单的实验看下结果吧。
 
 - 先看下BroadcastReceiver的onReceiver回调是在哪个线程里面 （打印线程信息）  
@@ -46,7 +47,7 @@ on a null object reference
 
 好了，结果分析完了，知其然也要知其所以然，我们通过源码来分析一下android系统是如何做到跨进程调用在不同的线程中执行（很多是辉辉博客里面的代码摘要，这里我们仅仅关注上述跨进程为何发生在不同的线程中，省略其他的代码分析）。
 
-##1.通过binder接口调用（AIDL也属于这种）
+## 1.通过binder接口调用（AIDL也属于这种）
 我们通常使用aidl接口的时候都会生成类似下面的代码：
 
 ```java
@@ -72,8 +73,8 @@ _reply.recycle();
 _data.recycle();
 }
 }
-```
-当我们在client端调用updateArticle做跨进程通信时实际上是调用的这段代码，这就是一个标准的binderIPC调用，mRemote指向IBinder类型的server端代理，mRemote.transact()实际上是binderProxy.transact():
+```    
+当我们在client端调用updateArticle做跨进程通信时实际上是调用的这段代码，这就是一个标准的binderIPC调用，mRemote指向IBinder类型的server端代理，mRemote.transact()实际上是binderProxy.transact():    
 
 ```java
 final class BinderProxy implements IBinder {
@@ -83,15 +84,74 @@ final class BinderProxy implements IBinder {
         return transactNative(code, data, reply, flags);
     }
 }
-```
+```    
 最终会通过jni调用native层的`IPCThreadState::self()->transact(
-            mHandle, code, data, reply, flags);`，而这个方法又会经过层层调用通过sysCall的方式从用户空间调用至内核空间（即binderDriver所在空间），而这个空间是真正可以共享内存的地方，我们简单看一下从用户空间是经历了哪些方法调用到内核空间的（这里的syscall指的是Binder ioctl，syscall还有其他的方式比如Binder_open等）
-
+            mHandle, code, data, reply, flags);`，而这个方法又会经过层层调用通过sysCall的方式从用户空间调用至内核空间（即binderDriver所在空间），而这个空间是真正可以共享内存的地方，我们简单看一下从用户空间是经历了哪些方法调用到内核空间的（这里的syscall指的是Binder ioctl，syscall还有其他的方式比如Binder_open等）   
             
-##2.通过BroadCastReceiver回调
+![用户空间调用过程](https://github.com/zhangxiang2014/zhangxiang2014.github.io/blob/master/_posts/%E7%94%A8%E6%88%B7%E7%A9%BA%E9%97%B4%E8%B0%83%E7%94%A8%E8%BF%87%E7%A8%8B.png?raw=true)
+  
+简单的过程如上，最终会调用`talkWithDriver()`陷入内核(方式是`ioctl`)，我们接着分析看一下陷入内核之后的调用：
+
+![内核调用过程](https://github.com/zhangxiang2014/zhangxiang2014.github.io/blob/master/_posts/%E5%86%85%E6%A0%B8%E9%80%9A%E4%BF%A1%E8%BF%87%E7%A8%8B.png?raw=true)
+
+
+```java
+static int binder_thread_write(struct binder_proc *proc,
+            struct binder_thread *thread,
+            binder_uintptr_t binder_buffer, size_t size,
+            binder_size_t *consumed)
+{
+    uint32_t cmd;
+    void __user *buffer = (void __user *)(uintptr_t)binder_buffer;
+    void __user *ptr = buffer + *consumed;
+    void __user *end = buffer + size;
+    while (ptr < end && thread->return_error == BR_OK) {
+        //拷贝用户空间的cmd命令，此时为BC_ENTER_LOOPER
+        if (get_user(cmd, (uint32_t __user *)ptr)) -EFAULT;
+        ptr += sizeof(uint32_t);
+        switch (cmd) {
+          case BC_REGISTER_LOOPER:
+              if (thread->looper & BINDER_LOOPER_STATE_ENTERED) {
+                //出错原因：线程调用完BC_ENTER_LOOPER，不能执行该分支
+                thread->looper |= BINDER_LOOPER_STATE_INVALID;
+
+              } else if (proc->requested_threads == 0) {
+                //出错原因：没有请求就创建线程
+                thread->looper |= BINDER_LOOPER_STATE_INVALID;
+
+              } else {
+                proc->requested_threads--;
+                proc->requested_threads_started++;
+              }
+              thread->looper |= BINDER_LOOPER_STATE_REGISTERED;
+              break;
+
+          case BC_ENTER_LOOPER:
+              if (thread->looper & BINDER_LOOPER_STATE_REGISTERED) {
+                //出错原因：线程调用完BC_REGISTER_LOOPER，不能立刻执行该分支
+                thread->looper |= BINDER_LOOPER_STATE_INVALID;
+              }
+              //创建Binder主线程
+              thread->looper |= BINDER_LOOPER_STATE_ENTERED;
+              break;
+
+          case BC_EXIT_LOOPER:
+              thread->looper |= BINDER_LOOPER_STATE_EXITED;
+              break;
+        }
+        ...
+    }
+    *consumed = ptr - buffer;
+  }
+  return 0;
+}
+
+```
+            
+## 2.通过BroadCastReceiver回调
 通过注册广播回调的方式我们要分析两个过程，一个是**注册广播**，一个是**发送广播**。
 
-###2.1注册广播  
+### 2.1注册广播  
    广播注册较与发送过程简单一点,我们来看一下我们通常调用的方式：   
    
 ```java
@@ -137,7 +197,7 @@ private Intent registerReceiverInternal(BroadcastReceiver receiver, int userId,
 }
 ```
 `registerReciverInternal`我们可以看到当我们不指定`handler`默认就是注册`receiver`进程中的主线程`handler`赋值给`scheduler`，这个`scheduler`会和`receiver`以及`context`等被封装成`ReceiverDispatcher`（过程2.3中返回的`IIntentReceiver`就是该类的一个内部类）,我们仔细看一下这个广播分发者`ReceiverDispatcher`和其内部类`InnerReceiver `
-####2.1.1 创建ReceiverDispatcher和InnerReceiver
+#### 2.1.1 创建ReceiverDispatcher和InnerReceiver
 
 - ReceiverDispatcher    
 
@@ -172,7 +232,7 @@ final static class InnerReceiver extends IIntentReceiver.Stub {
 ```
 实际上我们不用太关心外部类ReceiverDispatcher,内部类InnerReceiver已经存有外部类的弱引用rd，这个InnerReceiver是个binder类，可以进行binder通信，即2.4中`data.writeStrongBinder(receiver != null ? receiver.asBinder() : null);`
 
-###2.1.2 与ams进行binder通信进行注册过程
+### 2.1.2 与ams进行binder通信进行注册过程
 ```java
 public Intent registerReceiver(IApplicationThread caller, String packageName,IIntentReceiver receiver,
         IntentFilter filter, String perm, int userId) throws RemoteException
@@ -199,15 +259,16 @@ public Intent registerReceiver(IApplicationThread caller, String packageName,IIn
     data.recycle();
     return intent;
 }
-```
+```    
+
 接下来的过程在ams中，最终会会将注册者进程中的receiver保存到ams中的`AMS.mRegisteredReceivers(已注册广播队列)`，
 > **其中mRegisteredReceivers是记录着所有已注册的广播，以receiver IBinder为key, ReceiverList为value为HashMap。其中reveiver代表广播接收者队列。**
 
-###2.2发送广播
+### 2.2发送广播
 发送广播过程比较复杂，我们先来看一张时序图：（从左至右按颜色划分分别代表客户端进程，ams所在进程，”ActivityManager”的线程（实际就是在主线程），广播调用者进程，广播接收者线程（主线程））
 ![广播发送过程](http://gityuan.com//images/ams/send_broadcast.jpg)
 我们以并行广播为例跳过前面的步骤直接从12（2.2.1）开始分析，12通过binderIPC调用到发送广播调用者进程ApplicationThread(AT)最终将调用至广播接收者主线程
-####2.2.1 scheduleRegisteredReceiver
+#### 2.2.1 scheduleRegisteredReceiver
 ```java
 public void scheduleRegisteredReceiver(IIntentReceiver receiver, Intent intent,
         int resultCode, String dataStr, Bundle extras, boolean ordered,
@@ -220,7 +281,7 @@ public void scheduleRegisteredReceiver(IIntentReceiver receiver, Intent intent,
 }
 ```
 此处的reveiver就是注册广播时创建的，见小节[2.1.1]，可知该receiver=LoadedApk.ReceiverDispatcher.InnerReceiver。
-###2.2.2 InnerReceiver.performReceive和ReceiverDispatcher.performReceive
+### 2.2.2 InnerReceiver.performReceive和ReceiverDispatcher.performReceive
 
 - InnerReceiver.performReceive
 
@@ -257,7 +318,7 @@ public void performReceive(Intent intent, int resultCode, String data,
 
 ```
 其中Args继承于BroadcastReceiver.PendingResult，实现了接口Runnable; 其中mActivityThread是当前进程的主线程, 是由[小节2.1.1]完成赋值过程.最终通过消息分发机制post到主线程执行ReceiverDispatcher.Args.run方法，通过类加载器完成onReveiver回调2.2.3
-###2.2.3ReceiverDispatcher.Args.run
+### 2.2.3ReceiverDispatcher.Args.run
 ```java
 public final class LoadedApk {
   static final class ReceiverDispatcher {
