--- a/_posts/2017-10-31-android跨进程通信思考.md
+++ b/_posts/2017-10-31-android跨进程通信思考.md
@@ -232,7 +232,7 @@ final static class InnerReceiver extends IIntentReceiver.Stub {
 ```
 实际上我们不用太关心外部类ReceiverDispatcher,内部类InnerReceiver已经存有外部类的弱引用rd，这个InnerReceiver是个binder类，可以进行binder通信，即2.4中`data.writeStrongBinder(receiver != null ? receiver.asBinder() : null);`
 
-### 2.1.2 与ams进行binder通信进行注册过程
+#### 2.1.2 与ams进行binder通信进行注册过程
 ```java
 public Intent registerReceiver(IApplicationThread caller, String packageName,IIntentReceiver receiver,
         IntentFilter filter, String perm, int userId) throws RemoteException
@@ -281,7 +281,7 @@ public void scheduleRegisteredReceiver(IIntentReceiver receiver, Intent intent,
 }
 ```
 此处的reveiver就是注册广播时创建的，见小节[2.1.1]，可知该receiver=LoadedApk.ReceiverDispatcher.InnerReceiver。
-### 2.2.2 InnerReceiver.performReceive和ReceiverDispatcher.performReceive
+#### 2.2.2 InnerReceiver.performReceive和ReceiverDispatcher.performReceive
 
 - InnerReceiver.performReceive
 
@@ -318,7 +318,7 @@ public void performReceive(Intent intent, int resultCode, String data,
 
 ```
 其中Args继承于BroadcastReceiver.PendingResult，实现了接口Runnable; 其中mActivityThread是当前进程的主线程, 是由[小节2.1.1]完成赋值过程.最终通过消息分发机制post到主线程执行ReceiverDispatcher.Args.run方法，通过类加载器完成onReveiver回调2.2.3
-### 2.2.3ReceiverDispatcher.Args.run
+#### 2.2.3ReceiverDispatcher.Args.run
 ```java
 public final class LoadedApk {
   static final class ReceiverDispatcher {
