--- a/_posts/2017-10-31-android跨进程通信思考.md
+++ b/_posts/2017-10-31-android跨进程通信思考.md
@@ -16,7 +16,16 @@ on a null object reference
 	at android.os.Parcel.readException(Parcel.java:1573)
 	at com.zhangxiang.IBooster$Stub$Proxy.startControl(IBooster.java:136)
 ```
-从log上看这个crash是从一个aidl接口抛出的，实际上是我在client端通过Binder去调用server端的接口抛出的异常。紧接着我试着在server端断点调试，看看是server端走到哪一步抛出的异常，调试的结果是在一个类的初始化函数里面抛出的。一开始我是一脸懵逼的，一个类的初始化函数也能抛出异常？后来在server端try-catch了这个exception打印了一下这个log的堆栈信息找到问题了（这里插入一下log）
+从log上看这个crash是从一个aidl接口抛出的，实际上是我在client端通过Binder去调用server端的接口抛出的异常。紧接着我试着在server端断点调试，看看是server端走到哪一步抛出的异常，调试的结果是在一个类的初始化函数里面抛出的。一开始我是一脸懵逼的，一个类的初始化函数也能抛出异常？后来在server端try-catch了这个exception打印了一下这个log的堆栈信息找到问题了（log如下）
+> MSG:
+ java.lang.NullPointerException: Attempt to read from field 
+ 'android.os.MessageQueue android.os.Looper.mQueue' on a null object  reference
+ 	at android.os.Handler.<init>(Handler.java:229)
+ 	at android.os.Handler.<init>(Handler.java:137)
+ 	at android.telephony.PhoneStateListener$1.<init>(PhoneStateListener.java:279)
+ 	at android.telephony.PhoneStateListener.<init>(PhoneStateListener.java:279)
+ 	at android.telephony.PhoneStateListener.<init>(PhoneStateListener.java:249)
+```  
 
 问题是这个类的一个成员变量进行初始化的时候默认会用当前线程的handler作为这个成员变量（类）初始化的一个成员变量的赋值，其实就是需要一个handler。如果不显示的调用的这个成员变量带有handler参数的初始化方法，就会默认取当前线程的handler。很遗憾，server端的当前线程没有handler（因为是在binder线程），如果需要handler则需要perpare一个looper使得当前线程可以循环读取消息队列接着再创建一个handler去处理消息。当然也可以直接把server的逻辑post到mainThread，mainThread默认就有一个looper.
 
@@ -36,16 +45,16 @@ on a null object reference
 算了，我们还是做一个简单的实验看下结果吧。
 
 - 先看下BroadcastReceiver的onReceiver回调是在哪个线程里面 （打印线程信息）  
-
+`11-01 18:38:08.618 10023 10023 I GameService: 当前线程信息：Thread[main,5,main]`
 >很好，是在MainThread里面，我想跟大部分人的想法一样，我们经常在这个回调里面做一些主线程的ui更新操作，没问题。但是我们常常都是程序的主线程去`register`一个`BroadcastReceiver `,假设我们`new Thread`去`register`,你猜onReceiver还是在主线程中回调吗？看下结果：
->
+>`I GameService: 当前线程信息：Thread[main,5,main]`   
 >还是在MainThread，所以你要注意了，如果在onReceiver里面做一些耗时操作的话一定要在10内解决。开玩笑，如果要做耗时操作请在service里面做，也不要在子线程做，因为当你的进程不是常驻的时候（比如你静态注册了一个receiver）很有可能接受到这个broadcast后这个进程变成空进程（没有组件了）会被系统回收掉，这个时候你的子线程也不会执行完，所以可以用一个service去做这个耗时操作。另外，androidO已经禁止了除系统进程外的三方应用通过静态注册的方式注册系统广播，这个应该是为了减轻ams的负担做的考虑，也防止了三方应用通过系统广播这种方式自启动。
 
 - 那么ContentProvider的增删改查操作是不是也在进程的mainThread中执行呢？
-
+`11-01 18:37:04.220 10023 10036 I com.miui.&*!@.Provider: 当前线程信息：Thread[Binder:10023_2,5,main]`
 >很遗憾，并不是，是在binder线程中，所以即便在增删改查中做一些耗时操作也不会导致ANR，我也试了在里面sleep很长时间并不会有异常。这个设计是合理的，contentProvider作为跨进程的数据访问方式，增删改查消耗一些时间是很正常的，但是作为client端去访问的时候需要在子线程去异步执行这个操作否则这个时间过长会抛出异常。
 
-好了，结果分析完了，知其然也要知其所以然，我们通过源码来分析一下android系统是如何做到跨进程调用在不同的线程中执行（很多是辉辉博客里面的代码摘要，这里我们仅仅关注上述跨进程为何发生在不同的线程中，省略其他的代码分析）。
+好了，结果分析完了，知其然也要知其所以然，我们通过源码来分析一下android系统是如何做到跨进程调用在不同的线程中执行（很多是辉辉博客里面的代码摘要，这里我们仅仅关注上述跨进程是发生在不同的线程中的，省略其他的代码分析）。
 
 ## 1.通过binder接口调用（AIDL也属于这种）
 我们通常使用aidl接口的时候都会生成类似下面的代码：
@@ -358,3 +367,19 @@ public final class LoadedApk {
     }
     
 ```
+接下来,便进入主线程,最终调用`BroadcastReceiver`具体实现类的`onReceive() `方法。
+
+## 3.通过ContentProvider跨进程调用
+实际上通过contentprovider访问调用者进程返回的cursor对象时也是一个类似1过程的binder通信，只不过这里的ontranct的协议是QUERY_TRANSACTION：
+`mRemote.transact(IContentProvider.QUERY_TRANSACTION, data, reply, 0);`   
+最终也会调用至被调用进程的binder线程中，这个过程很类似，我们就归作一类。contentProvider跨进程通信复杂且核心的地方在于provider的发布和安装过程.   
+
+-  什么是发布过程（即publish）？
+	
+> 发布过程实际上是调用者进程通过binder call调用至ams中，ams发现调用者进程需要请求的provider（以ContentProviderRecord对象描述）尚未保存在mProviderMap中，通知provider所在进程启动并安装该进程下的所有的provider,当provider安装完成之后，被调用者进程再binder call至ams进行publish,将所有provider保存至ams的mProvdermap中（保存的是ContentProviderRecord）。   
+
+- 什么事安装过程（即install)?
+
+> 其实就是请求provider进程的activitythread将provider对象保存至一个以`new ProviderKey(auth, userId)`为key和以`new ProviderClientRecord(auths, provider, localProvider, holder)`为value的hashmap中，同时被请求进程的acitivitythread通过反射创建目标ContentProvider对象并回调目标ContentProvider.onCreate方法
+
+
