binder线程创建过程
Signed-off-by: zhangxiang <805198265@qq.com>

--- a/_posts/2017-10-31-android跨进程通信思考.md
+++ b/_posts/2017-10-31-android跨进程通信思考.md
@@ -3,7 +3,7 @@ layout: post
 title:  NullPointerException引发的对Android跨进程通信的思考
 date:   2017-09-20 20:13
 categories: android
-permalink: /archivers/randomMoveView
+permalink: /archivers/nullPointerException_think
 ---
 
 **事故是这样的：**
@@ -48,7 +48,7 @@ on a null object reference
 `11-01 18:38:08.618 10023 10023 I GameService: 当前线程信息：Thread[main,5,main]`
 >很好，是在MainThread里面，我想跟大部分人的想法一样，我们经常在这个回调里面做一些主线程的ui更新操作，没问题。但是我们常常都是程序的主线程去`register`一个`BroadcastReceiver `,假设我们`new Thread`去`register`,你猜onReceiver还是在主线程中回调吗？看下结果：
 >`I GameService: 当前线程信息：Thread[main,5,main]`   
->还是在MainThread，所以你要注意了，如果在onReceiver里面做一些耗时操作的话一定要在10内解决。开玩笑，如果要做耗时操作请在service里面做，也不要在子线程做，因为当你的进程不是常驻的时候（比如你静态注册了一个receiver）很有可能接受到这个broadcast后这个进程变成空进程（没有组件了）会被系统回收掉，这个时候你的子线程也不会执行完，所以可以用一个service去做这个耗时操作。另外，androidO已经禁止了除系统进程外的三方应用通过静态注册的方式注册系统广播，这个应该是为了减轻ams的负担做的考虑，也防止了三方应用通过系统广播这种方式自启动。
+>还是在MainThread，所以你要注意了，如果在onReceiver里面做一些耗时操作的话一定要在10s内解决。开玩笑，如果要做耗时操作请在service里面做，也不要在子线程做，因为当你的进程不是常驻的时候（比如你静态注册了一个receiver）很有可能接受到这个broadcast后这个进程变成空进程（没有组件了）会被系统回收掉，这个时候你的子线程也不会执行完，所以可以用一个service去做这个耗时操作。另外，androidO已经禁止了除系统进程外的三方应用通过静态注册的方式注册系统广播，这个应该是为了减轻ams的负担做的考虑，也防止了三方应用通过系统广播这种方式自启动。
 
 - 那么ContentProvider的增删改查操作是不是也在进程的mainThread中执行呢？
 `11-01 18:37:04.220 10023 10036 I com.miui.&*!@.Provider: 当前线程信息：Thread[Binder:10023_2,5,main]`
@@ -99,63 +99,60 @@ final class BinderProxy implements IBinder {
             
 ![用户空间调用过程](https://github.com/zhangxiang2014/zhangxiang2014.github.io/blob/master/_posts/%E7%94%A8%E6%88%B7%E7%A9%BA%E9%97%B4%E8%B0%83%E7%94%A8%E8%BF%87%E7%A8%8B.png?raw=true)
   
-简单的过程如上，最终会调用`talkWithDriver()`陷入内核(方式是`ioctl`)，我们接着分析看一下陷入内核之后的调用：
+简单的过程如上(横向代表同一个方法内部的线形执行)，最终会调用`talkWithDriver()`陷入内核(方式是`ioctl`)。我们接着分析看一下陷入内核之后的调用：
 
 ![内核调用过程](https://github.com/zhangxiang2014/zhangxiang2014.github.io/blob/master/_posts/%E5%86%85%E6%A0%B8%E9%80%9A%E4%BF%A1%E8%BF%87%E7%A8%8B.png?raw=true)
 
+这个过程看代码较为复杂，这里我们关注binder线程的创建，其实这段调用实际上最终会产生一个`BR_SPAWN_LOOPER`的cmd，接着调用`executeCommand`来执行这个cmd：
 
 ```java
-static int binder_thread_write(struct binder_proc *proc,
-            struct binder_thread *thread,
-            binder_uintptr_t binder_buffer, size_t size,
-            binder_size_t *consumed)
+status_t IPCThreadState::executeCommand(int32_t cmd)
 {
-    uint32_t cmd;
-    void __user *buffer = (void __user *)(uintptr_t)binder_buffer;
-    void __user *ptr = buffer + *consumed;
-    void __user *end = buffer + size;
-    while (ptr < end && thread->return_error == BR_OK) {
-        //拷贝用户空间的cmd命令，此时为BC_ENTER_LOOPER
-        if (get_user(cmd, (uint32_t __user *)ptr)) -EFAULT;
-        ptr += sizeof(uint32_t);
-        switch (cmd) {
-          case BC_REGISTER_LOOPER:
-              if (thread->looper & BINDER_LOOPER_STATE_ENTERED) {
-                //出错原因：线程调用完BC_ENTER_LOOPER，不能执行该分支
-                thread->looper |= BINDER_LOOPER_STATE_INVALID;
-
-              } else if (proc->requested_threads == 0) {
-                //出错原因：没有请求就创建线程
-                thread->looper |= BINDER_LOOPER_STATE_INVALID;
-
-              } else {
-                proc->requested_threads--;
-                proc->requested_threads_started++;
-              }
-              thread->looper |= BINDER_LOOPER_STATE_REGISTERED;
-              break;
-
-          case BC_ENTER_LOOPER:
-              if (thread->looper & BINDER_LOOPER_STATE_REGISTERED) {
-                //出错原因：线程调用完BC_REGISTER_LOOPER，不能立刻执行该分支
-                thread->looper |= BINDER_LOOPER_STATE_INVALID;
-              }
-              //创建Binder主线程
-              thread->looper |= BINDER_LOOPER_STATE_ENTERED;
-              break;
-
-          case BC_EXIT_LOOPER:
-              thread->looper |= BINDER_LOOPER_STATE_EXITED;
-              break;
-        }
-        ...
+    status_t result = NO_ERROR;
+    switch ((uint32_t)cmd) {
+      ...
+      case BR_SPAWN_LOOPER:
+          //创建新的binder线程
+          mProcess->spawnPooledThread(false);
+          break;
+      ...
     }
-    *consumed = ptr - buffer;
-  }
-  return 0;
+    return result;
+}
+```
+创建出一个新的binder*普通*线程，它的创建需要一些条件：
+>
+- 当前进程中没有请求创建binder线程；
+- 当前进程没有空闲可用的binder线程；（线程进入休眠状态的个数就是空闲线程数）
+- 当前进程已启动线程个数小于最大上限(默认15)；
+- 当前线程已接收到BC_ENTER_LOOPER或者BC_REGISTER_LOOPER命令，即当前处于BINDER_LOOPER_STATE_REGISTERED或者BINDER_LOOPER_STATE_ENTERED状态。【小节2.6】已设置状态为BINDER_LOOPER_STATE_ENTERED，显然这条件是满足的。
+
+请注意，上述说的是binder*普通*线程，实际上还有一个binder*主线程*，这个实际上是在进程启动的时候创建的：
+> Zygote进程发出创建进程的socket消息，Zygote收到消息后会调用Zygote.forkAndSpecialize()来fork出新进程，在新进程中会调用到RuntimeInit.nativeZygoteInit方法，该方法经过jni映射，最终会调用到app_main.cpp中的onZygoteInit    
+
+```java
+virtual void onZygoteInit()
+{
+    //获取ProcessState对象
+    sp<ProcessState> proc = ProcessState::self();
+    //启动新binder线程 【见下图中2.2】
+    proc->startThreadPool();
 }
 
 ```
+接下来我们就用一张代码流程图来看看整个创建binder主线程的过程：
+
+![binder线程池启动代码流程图](https://github.com/zhangxiang2014/zhangxiang2014.github.io/blob/master/_posts/binder%E7%BA%BF%E7%A8%8B%E6%B1%A0%E5%90%AF%E5%8A%A8%E4%BB%A3%E7%A0%81%E4%BA%A4%E4%BA%92%E5%9B%BE.png?raw=true)
+
+一张图不够用，我们再继续分析一下上图2.6代码逻辑：
+
+![2.6](https://github.com/zhangxiang2014/zhangxiang2014.github.io/blob/master/_posts/2.6%E8%A1%A5%E5%85%85.png?raw=true)
+
+这里基本上就分析完了，我们再看下面一张图来看看整个binder线程的创建：
+
+![binder线程的创建流程图](http://gityuan.com/images/binder/binder-thread-pool/binder_thread_create.jpg)
+
+
             
 ## 2.通过BroadCastReceiver回调
 通过注册广播回调的方式我们要分析两个过程，一个是**注册广播**，一个是**发送广播**。
