--- a/_posts/2017-12-24-利弗莫尔交易规则.md
+++ b/_posts/2017-12-24-利弗莫尔交易规则.md
@@ -12,9 +12,9 @@ permalink: /archivers/trading_rules
 ### 1.1 操作前提
 为了偏于说明规则，利弗莫尔印制了一种特别设计的表格纸，排列出不同的列，通过这样的安排来构成我所称的预期未来行情的地图。每一只股票的行情都占六列。其价格按照一定的规则分门别类纪录在每一列内。六列标题如下：
 
-次级回升|自然回升|上升趋势|下降趋势|自然回撤|次级回撤
--------|------|-------|-------|-------|------
-
+次级回升|自然回升|上升趋势|下降趋势|自然回撤|次级回撤|
+-------|------|-------|-------|-------|------|
+		
 
 下面我们用利弗莫尔的手稿看看他是如何记录三个股票（属于同一个股票群）的数据的，暂时可以先了解一下这六列概念，后面通过利弗莫尔交易规则就可以把数据准确的填入这六列中。
 
