--- a/_posts/2017-12-24-利弗莫尔交易规则.md
+++ b/_posts/2017-12-24-利弗莫尔交易规则.md
@@ -18,7 +18,7 @@ permalink: /archivers/trading_rules
 
 下面我们用利弗莫尔的手稿看看他是如何记录三个股票（属于同一个股票群）的数据的，暂时可以先了解一下这六列概念，后面通过利弗莫尔交易规则就可以把数据准确的填入这六列中。
 
-![交易表格记录手稿](https://github.com/zhangxiang2014/zhangxiang2014.github.io/blob/master/_posts/paper_hand.png?raw=true){:height="20%" width="20%"}
+![交易表格记录手稿](https://github.com/zhangxiang2014/zhangxiang2014.github.io/blob/master/_posts/paper_hand.png?raw=true){:height="384px" width="216px"}
 
 ### 1.2 操作规则
 
@@ -31,10 +31,10 @@ permalink: /archivers/trading_rules
 - 数据规则： 
    
 > 规则4(a)：当你开始记录数据时，第一天药同时在上升趋势栏最后一个数据下标最后一个数据下标两条红线。当市场发生回落行情、且下跌幅度距离上升趋势栏最后一个数字约6点时，开始转换记录栏。（**在上升趋势栏最后一个数据下标两条红线，因为那是上升趋势前期最高点，现在成了市场上方的标志性水平--利弗莫尔所说的关键点之一**）    
-> ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_4a.png){:height="20%" width="20%"}   
+> ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_4a.png){:height="216px" width="216px"}   
 > 
 > 规则4(b)：当你开始在自然回升栏或上升趋势栏记录数据时，第一天要同时在自然回撤栏最后一个数据下标两条红线。当市场发生回升行情且上升幅度距离自然回撤栏最后一个数字约6点时，开始转换记录栏。（**一旦市场从自然回撤栏阶段的最低点起向上回升的幅度达到6点，则判断市场已经脱离了自然回撤状态，进入自然回升状态或者上升趋势恢复。转换记录栏，其实就是识别和标注新到来的行情。**）
->  ![](https://github.com/zhangxiang2014/zhangxiang2014.github.io/blob/master/_posts/rule_4b.png?raw=true){:height="20%" width="20%"}    
+>  ![](https://github.com/zhangxiang2014/zhangxiang2014.github.io/blob/master/_posts/rule_4b.png?raw=true){:height="216px" width="216px"}    
 > 
 > **总结一下上述两条规则：现在已经有了两个关键点可供观察，根据市场在这两点附近的表现，就能够形成自己的判断，到底原有的趋势确实即将恢复——还是原来的市场运动已经告终。一般地，如果市场向上突破上升趋势前期最高点重新创新高，则说明调整阶段结束上升趋势恢复；如果市场向下跌破调整阶段的最低点创出新低，则说明市场顶部过程已经完成，原先的上升趋势已经告终。（上图水平红线标注的就是调整阶段的价格区间）**  
 > 
