--- a/_posts/2017-12-24-利弗莫尔交易规则.md
+++ b/_posts/2017-12-24-利弗莫尔交易规则.md
@@ -12,9 +12,9 @@ permalink: /archivers/trading_rules
 ### 1.1 操作前提
 为了偏于说明规则，利弗莫尔印制了一种特别设计的表格纸，排列出不同的列，通过这样的安排来构成我所称的预期未来行情的地图。每一只股票的行情都占六列。其价格按照一定的规则分门别类纪录在每一列内。六列标题如下：
 
-次级回升|自然回升|上升趋势|下降趋势|自然回撤|次级回撤|
--------|------|-------|-------|-------|------|
-		
+次级回升|自然回升|上升趋势|下降趋势|自然回撤|次级回撤
+-------|------|-------|-------|-------|------
+       |      |       |       |       |     	
 
 下面我们用利弗莫尔的手稿看看他是如何记录三个股票（属于同一个股票群）的数据的，暂时可以先了解一下这六列概念，后面通过利弗莫尔交易规则就可以把数据准确的填入这六列中。
 
@@ -22,13 +22,13 @@ permalink: /archivers/trading_rules
 
 ### 1.2 操作规则
 
-- 基本规则： 
+- ####1.2.1基本规则： 
      
 > 规则1：在上升趋势拦记录价格时，用黑墨水（西方偏好黑色表示上升）。   
 > 规则2：在下降趋势栏记录价格时，用红墨水。     
 > 规则3：在其余栏交易价格时，用铅笔（图中为蓝色，印刷需要）
 
-- 数据规则： 
+- ####数据规则4，5（有图示）： 
    
 > 规则4(a)：当你开始记录数据时，第一天药同时在上升趋势栏最后一个数据下标最后一个数据下标两条红线。当市场发生回落行情、且下跌幅度距离上升趋势栏最后一个数字约6点时，开始转换记录栏。（**在上升趋势栏最后一个数据下标两条红线，因为那是上升趋势前期最高点，现在成了市场上方的标志性水平--利弗莫尔所说的关键点之一**）    
 > ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_4a.png){:height="400px" width="270px"}   
@@ -45,6 +45,14 @@ permalink: /archivers/trading_rules
 > ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_4c.png){:height="400px" width="270px"}     
 > 
 > 规则5(a)：如果正在自然回升栏记录数字，最新到来的价格比自然回升栏内用黑线标记的最后一个价格高3个点或更多，那么该价格就应当用黑墨水记入上升趋势栏。（**此时说明地步形态已经形成，市场已经从下降趋势逆转为上升趋势**）   
->    
 > ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_5a.png){:height="400px" width="270px"}    
+> 
+> 规则5(b)：如果正在自然回撤栏记录数字、最新到来的价格比自然回撤栏内用红线标记的最后一个价格低3个点或更多，那么该价格就应当用红墨水记入下降趋势栏。（**这同样是判断趋势真正逆转的3点突破规则）    
+> ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_5b.png){:height="400px" width="270px"} 
+
+- ####数据规则6（a,b,c为基本规则无图示）： 
+
+> 规则6(a)：如果正在上升趋势栏记录价格，新发生的回落过程达到了大约6个点的幅度，则转到自然回撤栏记录这些价格，此后每一天，只要该股票的价格低于自然回撤栏最后记录的价格，就继续在该栏记录。（**在自然回撤阶段，只要市场持续创新低，就继续在本栏记录新低价格。换言之，自然回撤栏中记录的是市场连续下跌的过程**）
+> 
+> 规则6(b)：如果正在自然回升栏记录价格，新发生的回落过程达到了大约6个点的幅度，则转到自然回撤栏记录这些价格，此后每一天，只要该股票的价格低于自然回撤栏最新记录的价格，就继续在该栏记录数据。如果正在下降趋势栏记录价格，则只要新价格低于下降趋势栏内最后记录的价格，就继续在下降趋势栏记录。
 > 
