--- a/_posts/2017-12-24-利弗莫尔交易规则.md
+++ b/_posts/2017-12-24-利弗莫尔交易规则.md
@@ -22,13 +22,13 @@ permalink: /archivers/trading_rules
 
 ### 1.2 操作规则
 
-- #### 1.2.1基本规则： 
+#### 1.2.1 基本规则： 
      
 > 规则1：在上升趋势拦记录价格时，用黑墨水（西方偏好黑色表示上升）。   
 > 规则2：在下降趋势栏记录价格时，用红墨水。     
 > 规则3：在其余栏交易价格时，用铅笔（图中为蓝色，印刷需要）
 
-- #### 数据规则4，5（有图示）： 
+#### 1.2.2 数据规则4，5（有图示）： 
    
 > 规则4(a)：当你开始记录数据时，第一天药同时在上升趋势栏最后一个数据下标最后一个数据下标两条红线。当市场发生回落行情、且下跌幅度距离上升趋势栏最后一个数字约6点时，开始转换记录栏。（**在上升趋势栏最后一个数据下标两条红线，因为那是上升趋势前期最高点，现在成了市场上方的标志性水平--利弗莫尔所说的关键点之一**）    
 > ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_4a.png){:height="400px" width="270px"}   
@@ -50,9 +50,26 @@ permalink: /archivers/trading_rules
 > 规则5(b)：如果正在自然回撤栏记录数字、最新到来的价格比自然回撤栏内用红线标记的最后一个价格低3个点或更多，那么该价格就应当用红墨水记入下降趋势栏。（**这同样是判断趋势真正逆转的3点突破规则）    
 > ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_5b.png){:height="400px" width="270px"} 
 
-- #### 数据规则6（a,b,c为基本规则无图示）： 
+#### 1.2.3 数据规则6（a,b,c为基本规则无图示）： 
 
 > 规则6(a)：如果正在上升趋势栏记录价格，新发生的回落过程达到了大约6个点的幅度，则转到自然回撤栏记录这些价格，此后每一天，只要该股票的价格低于自然回撤栏最后记录的价格，就继续在该栏记录。（**在自然回撤阶段，只要市场持续创新低，就继续在本栏记录新低价格。换言之，自然回撤栏中记录的是市场连续下跌的过程**）
 > 
 > 规则6(b)：如果正在自然回升栏记录价格，新发生的回落过程达到了大约6个点的幅度，则转到自然回撤栏记录这些价格，此后每一天，只要该股票的价格低于自然回撤栏最新记录的价格，就继续在该栏记录数据。如果正在下降趋势栏记录价格，则只要新价格低于下降趋势栏内最后记录的价格，就继续在下降趋势栏记录。
 > 
+> 规则6(c)：如果正在下降趋势栏记录数字，新发生的回升过程达到了大约6个点的幅度，则转到自然回升栏记录这些价格，此后每一天，只要该股票的价格高于自然回升栏内最后记录的价格，就继续在该栏记录。
+> 
+> 规则6(d)：如果正在自然回撤栏记录数据，新发生的回升过程达到了大约6个点的幅度，则转到自然回升栏记录这些数据，此后每一天，只要该股票的价格高于自然回升栏内最后记录的价格，就继续在该栏记录。如果正在上升趋势栏记录价格，则只要新的价格高于上升趋势栏内最后记录的价格，就继续在上升趋势栏记录。
+> 
+> 规则6(e)：当你开始在自然回撤栏记录数据时，如果新的价格低于下降趋势栏内最后记录的数字，则应当将这个价格用红墨水记录在下降趋势栏。    
+> ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_6e.png){:height="400px" width="270px"} 
+> 
+> 规则6(f)：与上述规则相同，当你开始在自然回升栏记录数据的时候，最新的价格高于上升趋势栏内最后记录的价格，则停止在自然回升栏的记录，将这个价格用黑墨水记录在上升趋势栏。    
+> ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_6f.png){:height="400px" width="270px"} 
+> 
+> **规则6(g)**：如果正在自然回撤栏记录数据，一个回升过程幅度达到了距离自然回撤栏内最新记录的数据大约6+个点——+但是，这个价格并没有向上超过自然回升栏内最后记录的价格+——就应当将这个价格记录在次级回升栏，此后始终在该栏记录，直到最新成交价格向上超越了自然回升栏内最后记录的数据。当后面这种情况发生时，就应当重新转到自然回升栏记录数据。    
+> ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_6g.png){:height="400px" width="270px"}     
+> 解释1：原先市场处于自然回撤，但行情向上超过最低点达6，符合6点转向原则，应当转换记录栏。不过行情并没有向上超过自然回升阶段的高点，不能在自然回升中刷新纪录，因此讲上述行情记录到次级回升栏--判断属于次级回升行情。    
+> 解释2:如果次级回升行情达到的高度超过自然回升的高点，则判断行情属于自然回升阶段，回到自然回升栏刷新其最高点记录。不过，根据5（a),向上超过的幅度不可以超过3点，否则属于主要逆转趋势。
+> 
+> **规则6(h)**、如果正在自然回升栏记录数据，一个回落过程达到了大约6+个点的幅度，但是回落行情所及的价格并不低于自然回撤栏中最后记录的数字——+就应当将这个价格记录到次级回撤栏，此后始终在该栏记录，直到最新成交价低于自然回撤栏内最后记录的价格。当后面这种情况发生时，就应当重新转到自然回撤栏记录数据。    
+> ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_6h.png){:height="400px" width="270px"} 
