--- a/_posts/2017-12-24-利弗莫尔交易规则.md
+++ b/_posts/2017-12-24-利弗莫尔交易规则.md
@@ -22,13 +22,13 @@ permalink: /archivers/trading_rules
 
 ### 1.2 操作规则
 
-#### 1.2.1 基本规则： 
+- #### 1.2.1 基本规则： 
      
 > 规则1：在上升趋势拦记录价格时，用黑墨水（西方偏好黑色表示上升）。   
 > 规则2：在下降趋势栏记录价格时，用红墨水。     
 > 规则3：在其余栏交易价格时，用铅笔（图中为蓝色，印刷需要）
 
-#### 1.2.2 数据规则4，5（有图示）： 
+- #### 1.2.2 数据规则4，5（有图示）： 
    
 > 规则4(a)：当你开始记录数据时，第一天药同时在上升趋势栏最后一个数据下标最后一个数据下标两条红线。当市场发生回落行情、且下跌幅度距离上升趋势栏最后一个数字约6点时，开始转换记录栏。（**在上升趋势栏最后一个数据下标两条红线，因为那是上升趋势前期最高点，现在成了市场上方的标志性水平--利弗莫尔所说的关键点之一**）    
 > ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_4a.png){:height="400px" width="270px"}   
@@ -50,7 +50,7 @@ permalink: /archivers/trading_rules
 > 规则5(b)：如果正在自然回撤栏记录数字、最新到来的价格比自然回撤栏内用红线标记的最后一个价格低3个点或更多，那么该价格就应当用红墨水记入下降趋势栏。（**这同样是判断趋势真正逆转的3点突破规则）    
 > ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_5b.png){:height="400px" width="270px"} 
 
-#### 1.2.3 数据规则6（a,b,c为基本规则无图示）： 
+- #### 1.2.3 数据规则6（a,b,c,d为基本规则无图示）： 
 
 > 规则6(a)：如果正在上升趋势栏记录价格，新发生的回落过程达到了大约6个点的幅度，则转到自然回撤栏记录这些价格，此后每一天，只要该股票的价格低于自然回撤栏最后记录的价格，就继续在该栏记录。（**在自然回撤阶段，只要市场持续创新低，就继续在本栏记录新低价格。换言之，自然回撤栏中记录的是市场连续下跌的过程**）
 > 
@@ -66,10 +66,40 @@ permalink: /archivers/trading_rules
 > 规则6(f)：与上述规则相同，当你开始在自然回升栏记录数据的时候，最新的价格高于上升趋势栏内最后记录的价格，则停止在自然回升栏的记录，将这个价格用黑墨水记录在上升趋势栏。    
 > ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_6f.png){:height="400px" width="270px"} 
 > 
-> **规则6(g)**：如果正在自然回撤栏记录数据，一个回升过程幅度达到了距离自然回撤栏内最新记录的数据大约6+个点——+但是，这个价格并没有向上超过自然回升栏内最后记录的价格+——就应当将这个价格记录在次级回升栏，此后始终在该栏记录，直到最新成交价格向上超越了自然回升栏内最后记录的数据。当后面这种情况发生时，就应当重新转到自然回升栏记录数据。    
+> **规则6(g)**：如果正在自然回撤栏记录数据，一个回升过程幅度达到了距离自然回撤栏内最新记录的数据大约6+个点——但是，这个价格并没有向上超过自然回升栏内最后记录的价格+——就应当将这个价格记录在次级回升栏，此后始终在该栏记录，直到最新成交价格向上超越了自然回升栏内最后记录的数据。当后面这种情况发生时，就应当重新转到自然回升栏记录数据。    
 > ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_6g.png){:height="400px" width="270px"}     
 > 解释1：原先市场处于自然回撤，但行情向上超过最低点达6，符合6点转向原则，应当转换记录栏。不过行情并没有向上超过自然回升阶段的高点，不能在自然回升中刷新纪录，因此讲上述行情记录到次级回升栏--判断属于次级回升行情。    
-> 解释2:如果次级回升行情达到的高度超过自然回升的高点，则判断行情属于自然回升阶段，回到自然回升栏刷新其最高点记录。不过，根据5（a),向上超过的幅度不可以超过3点，否则属于主要逆转趋势。
+> 解释2:如果次级回升行情达到的高度超过自然回升的高点，则判断行情属于自然回升阶段，回到自然回升栏刷新其最高点记录。不过，根据5（a),向上超过的幅度不可以超过3点，否则属于主要趋势逆转。
 > 
-> **规则6(h)**、如果正在自然回升栏记录数据，一个回落过程达到了大约6+个点的幅度，但是回落行情所及的价格并不低于自然回撤栏中最后记录的数字——+就应当将这个价格记录到次级回撤栏，此后始终在该栏记录，直到最新成交价低于自然回撤栏内最后记录的价格。当后面这种情况发生时，就应当重新转到自然回撤栏记录数据。    
+> **规则6(h)**：如果正在自然回升栏记录数据，一个回落过程达到了大约6+个点的幅度，但是回落行情所及的价格并不低于自然回撤栏中最后记录的数字——+就应当将这个价格记录到次级回撤栏，此后始终在该栏记录，直到最新成交价低于自然回撤栏内最后记录的价格。当后面这种情况发生时，就应当重新转到自然回撤栏记录数据。    
 > ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_6h.png){:height="400px" width="270px"} 
+> 解释1：原先市场处于自然回升，但行情向下超过最高点达6，符合6点转向原则，应当转换记录栏。不过行情并没有向下跌破自然回撤阶段的低点，不能在自然回撤中刷新纪录，因此讲上述行情记录到次级回撤栏--判断属于次级回撤行情。    
+> 解释2:如果次级回撤行情下跌的程度超过自然回撤的低点，则判断行情属于自然回撤阶段，回到自然回撤栏刷新其最低点记录。不过，根据5（b),向下超过的幅度不可以超过3点，否则属于主要趋势逆转。
+     
+- #### 1.2.4 交易规则！！！： 
+
+> 规则7:同样的原则也适用于记录组合价格（不过这里以12点作为基础，而在单只股票情况下以6点为准）
+> 
+> **规则8**：一旦在自然回升栏或者自然回撤栏开始记录，则下降趋势栏或上升趋势栏中最后记录的价格立即成为关键点。在一段上冲行情或回落行情结束后，我们在相反的栏目中重新开始记录数据，此时，先前栏目中记录的极端价格就成为另一个关键点。   
+>       
+> **正是在上述两个关键点形成后，这些行情记录具有了极大价值，可以帮助你正确预期下一轮重大运动。这些关键点的下方标有两道红色或黑色墨水线，以吸引你的注意力。标注这些线的目的很明确，就是要将这些点始终放在你眼前，无论何时，只要最新成交价格位于这些点附近，就应当十分谨慎地密切关注市场。**
+> 
+> **规则9(a)**：当你在下降趋势栏看到用红墨水记录的最后价格下方标注了黑色线时，你也许会在该点附近得到买进信号。    
+> **规则9(b)**：如果在自然回升栏看到某个价格下方标注了黑色线，那么当该股票在下一轮上冲过程中接近了该关键点价位时，正是发现市场到底是否足够坚挺、是否能够明确改变路线进入上升趋势的时机。    
+> **规则9(c)**：反之亦然。当你在上升趋势栏看到用黑墨水记录的最后价格下方标有红线时，或者当你在自然回撤栏看到最后价格下方标有红线时，同样的道理也适用，只是方向相反。
+
+- #### 1.2.5 总结
+
+> 规则10（a):设计这一整套方法的目的是让我们有能力看清楚，当某个股票首次出现自然回升或自然回撤现象后，其后续动作到底是否属于原趋势状态的应有表现方式。如果原先的是市场运动将以明确的方式恢复，则不论上升、还是下降，市场都会穿越先前的关键点——+对于单个股票来说，穿越的幅度应为3+个点，在组合价格的情况下，穿越幅度应为6+个点。（在趋势进入调整阶段后，对行情常规的预期是原趋势恢复，这是规则6（f）的情形）
+>       
+> 规则10（b):在上升趋势的情况下，如果该股票未能做到这一点，并且在一轮回落行情中，下跌到最新关键点（记录在上升趋势栏，数字下方标有红线）之下3+个点或更多，则可能表明该股票的上升趋势已经结束。（如果原趋势未能如常恢复，则焦点转向另一个关键点。请参考规则5（b)。)  
+>    
+> 规则10（c):将上述原则应用到下降趋势，如果下降趋势将以明确的方式恢复，则在一轮自然回升行情结束后，新价格必须向下伸展到最新关键点（数字下方标有黑线）之下3+个点或更多，新价格将记录在下降趋势栏。（参考规则6（e））
+>    
+> 规则10（d):如果该股票未能做到这一点，并且在一轮回升行情中，市场上升到最新关键点（记录在下降趋势栏，数字下方标有黑线）之上3+个点或更多，则可能表明该股票的下降趋势已经结束。（参考规则5（a））
+>    
+> 规则10（e):如果正在自然回升栏记录数据，但当前上冲行情在上升趋势栏最新关键点（其下方标有红线）之下、接近该关键点的价位中止，并且该股票从这一点开始向下回落3+个点或更多，则构成一个危险信号，表明该股票的上升趋势可能已经终结。（在上升趋势调整阶段，先是回升行情未能挑战前期高点，再下挫3点以上，则可能构成栏上升趋势即将逆转的警告信号）    
+> ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_10e.png){:height="400px" width="270px"}    
+> 
+> 规则10(f)：如果正在自然回撤栏记录数据，但当前回落行情在下降趋势栏最新关键点（其下方标有黑线）之上、接近该关键点的价位中止，并且该股票从这一点开始向上回升3+个点或更多，则构成一个危险信号，表明该股票的下降趋势可能已经完结。（在下降趋势调整阶段，先是回落行情未能挑战前期低点，再向上反弹3点以上，则可能构成栏下降趋势即将逆转的警告信号。）    
+> ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_10f.png){:height="400px" width="270px"} 
