--- a/_posts/2017-12-24-利弗莫尔交易规则.md
+++ b/_posts/2017-12-24-利弗莫尔交易规则.md
@@ -47,7 +47,7 @@ permalink: /archivers/trading_rules
 > 规则5(a)：如果正在自然回升栏记录数字，最新到来的价格比自然回升栏内用黑线标记的最后一个价格高3个点或更多，那么该价格就应当用黑墨水记入上升趋势栏。（**此时说明地步形态已经形成，市场已经从下降趋势逆转为上升趋势**）   
 > ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_5a.png){:height="400px" width="270px"}    
 > 
-> 规则5(b)：如果正在自然回撤栏记录数字、最新到来的价格比自然回撤栏内用红线标记的最后一个价格低3个点或更多，那么该价格就应当用红墨水记入下降趋势栏。（**这同样是判断趋势真正逆转的3点突破规则）    
+> 规则5(b)：如果正在自然回撤栏记录数字、最新到来的价格比自然回撤栏内用红线标记的最后一个价格低3个点或更多，那么该价格就应当用红墨水记入下降趋势栏。（**这同样是判断趋势真正逆转的3点突破规则**）    
 > ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_5b.png){:height="400px" width="270px"} 
 
 - #### 1.2.3 数据规则6（a,b,c,d为基本规则无图示）： 
@@ -71,9 +71,9 @@ permalink: /archivers/trading_rules
 > 解释1：原先市场处于自然回撤，但行情向上超过最低点达6，符合6点转向原则，应当转换记录栏。不过行情并没有向上超过自然回升阶段的高点，不能在自然回升中刷新纪录，因此讲上述行情记录到次级回升栏--判断属于次级回升行情。    
 > 解释2:如果次级回升行情达到的高度超过自然回升的高点，则判断行情属于自然回升阶段，回到自然回升栏刷新其最高点记录。不过，根据5（a),向上超过的幅度不可以超过3点，否则属于主要趋势逆转。
 > 
-> **规则6(h)**：如果正在自然回升栏记录数据，一个回落过程达到了大约6+个点的幅度，但是回落行情所及的价格并不低于自然回撤栏中最后记录的数字——+就应当将这个价格记录到次级回撤栏，此后始终在该栏记录，直到最新成交价低于自然回撤栏内最后记录的价格。当后面这种情况发生时，就应当重新转到自然回撤栏记录数据。    
-> ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_6h.png){:height="400px" width="270px"} 
-> 解释1：原先市场处于自然回升，但行情向下超过最高点达6，符合6点转向原则，应当转换记录栏。不过行情并没有向下跌破自然回撤阶段的低点，不能在自然回撤中刷新纪录，因此讲上述行情记录到次级回撤栏--判断属于次级回撤行情。    
+> **规则6(h)**：如果正在自然回升栏记录数据，一个回落过程达到了大约6+个点的幅度，但是回落行情所及的价格并不低于自然回撤栏中最后记录的数字——就应当将这个价格记录到次级回撤栏，此后始终在该栏记录，直到最新成交价低于自然回撤栏内最后记录的价格。当后面这种情况发生时，就应当重新转到自然回撤栏记录数据。    
+> ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_6h.png){:height="400px" width="270px"}     
+> 解释1：原先市场处于自然回升，但行情向下超过最高点达6，符合6点转向原则，应当转换记录栏。不过行情并没有向下跌破自然回撤阶段的低点，不能在自然回撤中刷新纪录，因此讲上述行情记录到次级回撤栏--判断属于次级回撤行情。      
 > 解释2:如果次级回撤行情下跌的程度超过自然回撤的低点，则判断行情属于自然回撤阶段，回到自然回撤栏刷新其最低点记录。不过，根据5（b),向下超过的幅度不可以超过3点，否则属于主要趋势逆转。
      
 - #### 1.2.4 交易规则！！！： 
@@ -90,7 +90,7 @@ permalink: /archivers/trading_rules
 
 - #### 1.2.5 总结
 
-> 规则10（a):设计这一整套方法的目的是让我们有能力看清楚，当某个股票首次出现自然回升或自然回撤现象后，其后续动作到底是否属于原趋势状态的应有表现方式。如果原先的是市场运动将以明确的方式恢复，则不论上升、还是下降，市场都会穿越先前的关键点——+对于单个股票来说，穿越的幅度应为3+个点，在组合价格的情况下，穿越幅度应为6+个点。（在趋势进入调整阶段后，对行情常规的预期是原趋势恢复，这是规则6（f）的情形）
+> 规则10（a):设计这一整套方法的目的是让我们有能力看清楚，当某个股票首次出现自然回升或自然回撤现象后，其后续动作到底是否属于原趋势状态的应有表现方式。如果原先的是市场运动将以明确的方式恢复，则不论上升、还是下降，市场都会穿越先前的关键点——对于单个股票来说，穿越的幅度应为3+个点，在组合价格的情况下，穿越幅度应为6+个点。（在趋势进入调整阶段后，对行情常规的预期是原趋势恢复，这是规则6（f）的情形）
 >       
 > 规则10（b):在上升趋势的情况下，如果该股票未能做到这一点，并且在一轮回落行情中，下跌到最新关键点（记录在上升趋势栏，数字下方标有红线）之下3+个点或更多，则可能表明该股票的上升趋势已经结束。（如果原趋势未能如常恢复，则焦点转向另一个关键点。请参考规则5（b)。)  
 >    
@@ -105,4 +105,4 @@ permalink: /archivers/trading_rules
 > ![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/rule_10f.png){:height="400px" width="270px"} 
 >     
 下图为利弗莫尔手稿：    
-![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/hand_photograph.png){:height="400px" width="270px"} 
+![](https://raw.githubusercontent.com/zhangxiang2014/zhangxiang2014.github.io/master/_posts/handwrite_photograph.png){:height="400px" width="270px"} 
