--- a/_posts/2018-05-09-游记篇.md
+++ b/_posts/2018-05-09-游记篇.md
@@ -5,12 +5,12 @@ date:   2018-05-06 22:13
 categories: travel
 permalink: /archivers/travel
 ---
-提到香港，我最初的印象是千禧年香港回归，虽然那时很小但这种普天同庆的大事还是有印象的，再后来对香港的印象几乎全部来自于影视作品（我想很多人跟我一样）—— 我还记得小时候跟爸妈晚上一起看《陀枪师姐》，这部TVB的剧当时创造了香港的收视记录并保持了很久，拍摄地就是油麻地警署，可惜这次行程没有去。然后就是香港电影，20世纪初期是香港电影最繁荣的年代，这个年代出现了王晶、王家卫、徐克、刘伟强等鬼才导演，也出现了周星驰、四大天王、成龙等影视巨星，可以说80后和早一期90后都是看着香港电影长大的。但是我对香港还有很多其他的好奇心，比如生活、文化、人群结构等等，这次旅游我也是抱着巨大的好奇心去了解这座特别的城市。
+提到香港，我最初的印象是千禧年香港回归，虽然那时很小但这种普天同庆的大事还是有印象的，再后来对香港的印象几乎全部来自于影视作品（我想很多人跟我一样）—— 我还记得小时候跟爸妈晚上一起看《陀枪师姐》，这部TVB的剧当时创造了香港的收视记录并保持了很久，拍摄地就是油麻地警署，可惜这次行程没有去。然后就是香港电影，20世纪初期是香港电影最繁荣的年代，这个年代出现了王晶、王家卫、徐克、刘伟强等鬼才导演，也出现了周星驰、四大天王、成龙等影视巨星，可以说80后和早一期90后都是看着香港电影长大的。但是我对香港还有很多其他的好奇心，比如生活、文化、人群结构等等，这次旅游我也带着这些好奇心探索了一下这座城市。
 ## 游记篇
-先说旅游路线，这次路线的规划可以说是非常满意了，我们在香港呆了三天两晚，除住宿和购物两人花了不到1000港币，住就住在尖沙咀地铁站附近的海龙大厦（在马蜂窝预定的特价房），香港住是很贵的，我们预定的房间很小，只有7、8平米，但里面居然也有独卫，也算五脏俱全了，香港这地方寸土寸金，后面我们再说香港人是怎么解决人口密集的问题，下面说一些三天行程。  
+先说旅游路线，这次路线的规划可以说是非常满意了，我们在香港呆了三天两晚，除住宿和购物两人花了不到1000港币，住就住在尖沙咀地铁站附近的海龙大厦（在马蜂窝预定的特价房），香港住是很贵的，我们预定的房间很小，只有7、8平米，有独卫冰箱电视，也算五脏俱全了，说一下这三天的行程。  
 
 ### Day 1 
-第一天从早上从深圳过关到香港（去香港只需要港澳通行证即可），兑换港币的话不要在过海关的地方人工换，那个汇率不是按1:0.8换的，比0.8要高不少的，可以直接在香港的atm机自助兑换，支持国内大部分银联只不过需要15块钱的手续费所以最好一次性多取一点，然后办了香港的一卡通充值了150（事实证明香港的交通是很贵的，150是不够的，得250左右，这个一卡通还能刷部分售卖机），然后就去住住宿的地方了，从住宿的地方出来大概11点多，中午在兰芳园吃的捞丁，然后开始游玩，路线是
+第一天从早上从深圳过关到香港（去香港只需要港澳通行证即可），兑换港币的话不要在过海关的地方人工换，那个汇率不是按1:0.8换的，比0.8要高不少的，可以直接在香港的atm机自助兑换，支持国内大部分银联只不过需要15块钱的手续费所以最好一次性多取一点，然后办了香港的一卡通充值了150（事实证明香港的交通是很贵的，150是不够的，得250左右，这个一卡通还能刷部分售卖机），然后就去住住宿的地方了，从住宿的地方出来大概11点多，中午在**兰芳园**吃的捞丁，然后开始游玩，路线是
  
 -  先到海港城附近坐**天星小轮**横渡**维多利亚港**——从中环坐地铁到**香港大学**——回中环附近去**半山扶梯**——从山顶坐公交车下山（很刺激）去**九记牛腩**吃饭（很遗憾没开，我们去了附近一家挺出名的老店）——花20港币排队坐**摩天轮**（可以坐三圈很便宜了）下来欣赏**维多利亚港夜景**——乘地铁去**旺角**逛吃逛吃（我们还去了钵兰街，香港著名的红灯区，确实有不少夜总会）回旅馆。 
 
@@ -26,7 +26,7 @@ permalink: /archivers/travel
 门票团购很便宜比如太行山+杜莎夫人蜡像馆；很多店支持微信支付基本大部分店支持刷卡；半山扶梯上午是向下的下午才是向上的，建议下午去；除了去免税店买东西去大商场逛街的时候最好对比一下淘宝旗舰店的价格再买，比如很多阿迪耐克其实网上更便宜；在海港城如果遇到亚非国家（偏黑肤色贫民）的人过来搭讪千万不要理睬，他们就是问你要钱的而且一要就是100，态度很强硬野蛮，身处异地不要惹这种麻烦。
 
 ## 人文篇
-香港是个寸土寸金的地方，森林覆盖面积高，人均住房面积很低（不到10平米），前面留了个问题，香港人是怎么解决人口稠密问题的？其实主要是解决动（交通）静（住宅）的问题，展开说一下。    
+香港是个寸土寸金的地方，森林覆盖面积高，人均住房面积很低（不到10平米），那香港人是怎么解决人口稠密问题的？其实主要是解决动（交通）静（住宅）的问题，展开说一下。    
 
 - 静——鳞次栉比的高楼。香港的楼盖的普遍都特别高，无论居民楼还是写字楼还是什么购物中心，动辄几十层上百层，而且楼与楼之间的间隔也很近。香港最高的是环球贸易广场（484米，世界四大高楼之一），但要数最好看最能代表香港我觉得是此前最高楼香港国际金融中心，这栋楼一到晚上就会化身巨大的屏幕输出香港的魅力。当然看着美实际住起来可不是一回事，像我们住的一个带独卫的大床房只有7，8平米，我之前看看过香港有笼居的（不懂的可以自行百度），香港的住宅面积普遍在70，80平米，所以在香港住的话确实是一件蛮憋屈的事情。
 
